--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -8,6 +8,10 @@ jobs:
         steps:
             - name: pull own repo
               uses: actions/checkout@v4
-            - name: test
+            - name: list current files
               run: |
                 ls
+            - name: run the script
+              run: |
+                python test.py
+
