--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -21,5 +21,5 @@ jobs:
                 pipenv install
             - name: run the script
               run: |
-                python test.py
+                pipenv run python test.py
 
